[package]
name = "agora"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
socket2 = "0.5"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
rustyline = "17.0.1"
pem = "3.0"
shellexpand = "3.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
ed25519-dalek = "2.2.0"
zeroize = "1.8.1"
rpassword = "7.4.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.9.2"
chacha20poly1305 = "0.10.1"
subtle = "2.6.1"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"
